welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:2: error: ';' expected but ',' found.
quatre pas en avant, deux pas à gauche, quatre pas à droite, deux pas à droite, et quatre pas à gauche
                   ^